# AoC

./: .gitignore  README.md
aoc/2024/: aoc_utils.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.ipynb  day08.py  day09.ipynb  day10.ipynb  day10.py  day11.ipynb  day11.py  day12.py  day13.py  day14.py  day15.py  pyproject.toml
