[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Joe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
poetry-plugin-dotenv = "^2.6.0"
python-dotenv = "^1.0.1"
numpy = "^2.2.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
