[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Joe"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
poetry-plugin-dotenv = "^2.6.0"
python-dotenv = "^1.0.1"
numpy = "^2.2.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
